--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.xiomara</groupId>
     <artifactId>MicroserviciosServiconli</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>MicroserviciosServiconli</name>
     <description>MicroserviciosServiconli</description>
     <url/>
