--- a/patient-service/src/main/resources/application.yml
+++ b/patient-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: patient-service
 
   datasource:
-    url: jdbc:mysql://localhost:3306/serviconli2025?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/serviconli?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
     username: root
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
