--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# JWT Secret Key (¡Usa un valor más seguro en producción!)
+# JWT Secret Key
 jwt.secret= 2LM1OEf2filBHvqs2JMdaQBj2sWCqg7g
