--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=auth-service
 server.port=8081
 
 # MySQL Database Connection
-spring.datasource.url=jdbc:mysql://localhost:3306/serviconli?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://217.15.168.108:3307/serviconli?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=serviconli_user
+spring.datasource.password=serviconli_pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
