--- a/task-service/Dockerfile
+++ b/task-service/Dockerfile
@@ -2,7 +2,8 @@
 FROM maven:3.9.6-eclipse-temurin-17 AS build
 LABEL authors="Xiomara"
 WORKDIR /app
-COPY . .
+COPY task-service /app/task-service
+COPY pom.xml /app/pom.xml
 RUN mvn -f task-service/pom.xml clean package -DskipTests
 
 # Etapa 2: Imagen final
