--- a/task-service/src/main/resources/application.yml
+++ b/task-service/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 server:
-  port: 8082
+  port: ${TASK_PORT:8082}
 
 spring:
   application:
     name: task-service
 
   datasource:
-    url: jdbc:mysql://217.15.168.108:3307/serviconli?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-    username: serviconli_user
-    password: serviconli_pass
+    url:  ${SPRING_DATASOURCE_URL}
+    username:  ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
@@ -31,3 +31,8 @@ logging:
               BasicBinder: TRACE
     com:
       serviconli: DEBUG
+
+# URL del patient-service (para llamadas internas)
+patient:
+  service:
+    url: ${PATIENT_SERVICE_URL:http://patient-service:8083/api/v1}
