--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -2,7 +2,8 @@
 FROM maven:3.9.6-eclipse-temurin-17 AS build
 LABEL authors="Xiomara"
 WORKDIR /app
-COPY . .
+COPY api-gateway /app/api-gateway
+COPY pom.xml /app/pom.xml
 RUN mvn -f api-gateway/pom.xml clean package -DskipTests
 
 # Etapa 2: Imagen final
