--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,8 +1,8 @@
 # Etapa 1: Compilación
 FROM maven:3.9.6-eclipse-temurin-17 AS build
 LABEL authors="Xiomara"
-WORKDIR /app
-COPY . .
+COPY auth-service /app/auth-service
+COPY pom.xml /app/pom.xml
 RUN mvn -f auth-service/pom.xml clean package -DskipTests
 
 # Etapa 2: Imagen final
