--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=auth-service
 # Server Port
-server.port=8081
+server.port=${AUTH_PORT:8081}
 
 # MySQL Database Connection
-spring.datasource.url=jdbc:mysql://217.15.168.108:3307/serviconli?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=serviconli_user
-spring.datasource.password=serviconli_pass
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
@@ -15,4 +15,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # JWT Secret Key
-jwt.secret= 2LM1OEf2filBHvqs2JMdaQBj2sWCqg7g
+jwt.secret=${JWT_SECRET}
