--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # BASE DE DATOS
 # -------------------------
 # LOCAL: conectar desde tu PC usando la IP pública del VPS
-SPRING_DATASOURCE_URL=jdbc:mysql://217.15.168.108:3307/serviconli?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+SPRING_DATASOURCE_URL=jdbc:mysql://localhost:3307/serviconli?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 
 
 SPRING_DATASOURCE_USERNAME=serviconli_user
