--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,18 +1,16 @@
 spring.application.name=auth-service
-# Server Port
-server.port=${AUTH_PORT:8081}
+server.port=8081
 
-# MySQL Database Connection
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# --- CONFIGURACIÓN BD LOCAL (DOCKER) ---
+spring.datasource.url=jdbc:mysql://localhost:3307/serviconli?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=serviconli_pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
-# JPA Configuration
+# JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# JWT Secret Key
-jwt.secret=${JWT_SECRET}
+# JWT (Clave quemada para local)
+jwt.secret=2LM1OEf2filBHvqs2JMdaQBj2sWCqg7g
