--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=auth-service
 server.port=8081
 
-# --- CONFIGURACIÓN BD LOCAL (DOCKER) ---
+# --- CONEXIÓN DIRECTA A BD LOCAL (DOCKER) ---
 spring.datasource.url=jdbc:mysql://localhost:3307/serviconli?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=serviconli_pass
@@ -12,5 +12,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# JWT (Clave quemada para local)
+# JWT (Clave fija para desarrollo)
 jwt.secret=2LM1OEf2filBHvqs2JMdaQBj2sWCqg7g
