--- a/frontend-app/nginx/default.conf.template
+++ b/frontend-app/nginx/default.conf.template
@@ -1,14 +1,4 @@
-worker_processes 1;
-events { worker_connections 1024; }
-
-http {
-  include       /etc/nginx/mime.types;
-  default_type  application/octet-stream;
-  sendfile        on;
-  keepalive_timeout 65;
-
-  # Sirve archivos estáticos
-  server {
+server {
     listen 80;
     server_name _;
 
@@ -22,7 +12,7 @@ http {
 
     # Proxy para evitar CORS: todas las llamadas a /api serán redirigidas al API Gateway
     location /api/ {
-      # inyectado en build-time via envsubst: API_GATEWAY_HOST y API_GATEWAY_PORT
+      # Docker reemplazará estas variables ($API_...) al iniciar el contenedor
       proxy_pass http://$API_GATEWAY_HOST:$API_GATEWAY_PORT;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
@@ -33,10 +23,9 @@ http {
       proxy_read_timeout 90;
     }
 
-    # Opcional: si tus assets vienen con cache-control
+    # Opcional: caché para archivos estáticos
     location ~* \.(?:css|js|jpg|jpeg|gif|png|svg|ico|woff2|woff|ttf)$ {
       expires 7d;
       add_header Cache-Control "public";
     }
-  }
 }
